tests/error/ptr_assign_member.gw
typedef void (test)();
class D { function void test(){} }
D d;
d.test @=> test;
